[gd_scene load_steps=4 format=3 uid="uid://xqmenq7kceac"]

[ext_resource type="Script" uid="uid://d8a8kj7l1cqr" path="res://scripts/controller_control_panel.gd" id="1_vgjfy"]
[ext_resource type="StyleBox" uid="uid://bbl1eb5dnhvs2" path="res://visuals/normal_style_box.tres" id="2_ufra8"]

[sub_resource type="LabelSettings" id="LabelSettings_roiwr"]
font_size = 30

[node name="ControllerControlPanel" type="Control" node_paths=PackedStringArray("line", "main_control")]
layout_mode = 3
anchors_preset = 0
offset_left = 122.0
offset_top = -150.0
offset_right = 496.0
offset_bottom = 49.0
script = ExtResource("1_vgjfy")
line = NodePath("Line2D")
main_control = NodePath("PanelContainer")
metadata/_custom_type_script = "uid://c7xa78egerg3k"

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(187, 99.5, -71.5, 99.5, -122, 150)
width = 5.0
end_cap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 374.0
offset_bottom = 171.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_ufra8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
text = "Controller Control Panel"
label_settings = SubResource("LabelSettings_roiwr")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Joystick precision"

[node name="PrecisionLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(28, 31)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/minimum_character_width = 0
text = "0.01"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Joystick deadzone"

[node name="DeadzoneLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(28, 31)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/minimum_character_width = 0
text = "0.05"
expand_to_text_length = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
text = "Poll rate (Hz)"

[node name="PollRateLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(28, 31)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/minimum_character_width = 0
text = "60"
expand_to_text_length = true

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
text = "Send UDP"

[node name="SendCheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PrecisionLineEdit" to="." method="_on_precision_line_edit_text_submitted"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/DeadzoneLineEdit" to="." method="_on_deadzone_line_edit_text_submitted"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/PollRateLineEdit" to="." method="_on_poll_rate_line_edit_text_submitted"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/SendCheckButton" to="." method="_on_send_check_button_toggled"]
